# Aganitha-Test

./: .gitignore  README.md  pyproject.toml
docs/: API info.md  Approach Document.md
src/: get-papers-list.py
src/get_papers_NCBI/: __init__.py  get_papers_list.py  pubmed_fetcher.py
